[workspace]
members = [
  "bear",
  "intercept"
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
lazy_static = { version = "1.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yml = "0.0"
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help", "usage", "suggestions"] }
chrono = {  version = "0.4", default-features = false, features = ["std", "clock"] }
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime"]}
crossbeam = "0.8"
crossbeam-channel = "0.5"
rand = { version = "0.8" }
path-absolutize = "3.1"
directories = "5.0"
nom = { version = "7.1", default-features = false, features = ["std"] }
regex = "1.9"
shell-words = "1.1"

[workspace.package]
version = "4.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
repository = "https://github.com/rizsotto/Bear"
homepage = "https://github.com/rizsotto/Bear"
license = "GPL-3"
edition = "2021"
