# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
  "bear"
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yml = "0.0"
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help", "usage", "suggestions"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime"]}
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
path-absolutize = "3.1"
directories = "6.0"
nom = { version = "7.1", default-features = false, features = ["std"] }
regex = "1.9"
shell-words = "1.1"
tempfile = "3.13"
signal-hook = { version = "0.3", default-features = false }

[workspace.package]
version = "4.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
repository = "https://github.com/rizsotto/Bear"
homepage = "https://github.com/rizsotto/Bear"
license = "GPL-3"
edition = "2021"
