[package]
name = "bear"
description = "Bear is a tool that generates a compilation database for clang tooling."
keywords = ["clang", "clang-tooling", "compilation-database"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "bear"
path = "src/main.rs"

[dependencies]
intercept = { path = "../intercept" }
semantic = { path = "../semantic" }
json_compilation_db = { path = "../json_compilation_db" }
thiserror.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
clap.workspace = true
directories.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
path-absolutize.workspace = true
