# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "bear"
description = "Bear is a tool that generates a compilation database for clang tooling."
keywords = ["clang", "clang-tooling", "compilation-database"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "bear"
path = "src/lib.rs"

[[bin]]
name = "bear"
path = "src/bin/bear.rs"

[[bin]]
name = "wrapper"
path = "src/bin/wrapper.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
clap.workspace = true
directories.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
path-absolutize.workspace = true
shell-words.workspace = true
nom.workspace = true
regex.workspace = true
rand.workspace = true
tempfile.workspace = true

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1