[package]
name = "intercept-preload"
version = "3.1.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
license = "GPL-3.0-only"
description = "InterceptWrappers is a set of developer tool wrappers."
homepage = "https://github.com/rizsotto/Bear"
build = "build.rs"
links = "cexec"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "exec"
path = "src/lib.rs"
crate-type = ["dylib"]

[build-dependencies]
cc = "1.0.25"

[dependencies.clap]
version = "~2.32.0"
default-features = false
