[package]
name = "intercept"
version = "3.1.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
license = "GPL-3.0-only"
description = "BuildEAR is a tool that generates a compilation database for clang tooling."
homepage = "https://github.com/rizsotto/Bear"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "intercept"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.5.13"
error-chain = "0.12"
lazy_static = "1.2"
libc = "0.2"
log = "0.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shellwords = "1.0"
tempfile = "3.0"
#mockers_derive = "0.12.2"

#[dev-dependencies]
#mockers = "0.12.2"

[dependencies.clap]
version = "~2.32.0"
default-features = false
