[package]
name = "intercept"
version = "4.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
description = "Rust crate to intercept executed of commands."
keywords = ["clang", "clang-tooling", "compilation-database"]
repository = "https://github.com/rizsotto/Bear"
homepage = "https://github.com/rizsotto/Bear"
license = "GPL-3"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
log = "0.4"
simple_logger = { version = "4.2", default-features = false, features = ["timestamps"]}
clap = { version = "4.4", default-features = false, features = ["std", "cargo", "help", "usage", "suggestions"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
rand = "0.8.5"
chrono = "0.4.33"

[lib]
name = "intercept"
path = "src/lib.rs"

[[bin]]
name = "intercept"
path = "src/bin/intercept.rs"

[[bin]]
name = "wrapper"
path = "src/bin/wrapper.rs"
