[package]
name = "intercept"
description = "Rust crate to intercept executed of commands."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[features]
default = ["wrapper"]
preload = []
wrapper = []

[lib]
name = "intercept"
path = "src/lib.rs"

# TODO: remove this when bear implements the entry point
[[bin]]
name = "intercept"
path = "src/bin/intercept.rs"

# TODO: create this as a separate crate
[[bin]]
name = "wrapper"
path = "src/bin/wrapper.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
rand.workspace = true