[package]
name = "json_compilation_db"
description = "Rust crate to read/write JSON compilation database file."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
