[package]
name = "semantic"
description = "Rust crate to detect semantic of commands."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lib]
name = "semantic"
path = "src/lib.rs"

[dependencies]
intercept = { path = "../intercept" }
anyhow.workspace = true
path-absolutize.workspace = true
json_compilation_db.workspace = true
nom.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
log.workspace = true
clap.workspace = true